@@ -14,6 +14,7 @@ export(get_cloudmademap)
 export(get_database)
 export(get_googlemap)
 export(get_map)
+export(get_navermap)
 export(get_openstreetmap)
 export(get_stamenmap)
 export(ggimage)
@@ -38,6 +39,7 @@ export(timeStamp)
 export(update_database)
 export(url_lookup)
 import(RgoogleMaps)
+import(geosphere)
 import(ggplot2)
 import(grid)
 import(jpeg)
